--- a/starter-code v2/package.json
+++ b/starter-code v2/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.5",
+    "@fontsource/roboto-condensed": "^5.0.5",
     "@mui/base": "^5.0.0-beta.8",
     "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.2",
     "framer-motion": "^10.14.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
