loading spinner added & input functionality added

--- a/starter-code v2/package.json
+++ b/starter-code v2/package.json
@@ -16,7 +16,8 @@
     "@fontsource/roboto-condensed": "^5.0.5",
     "@mui/base": "^5.0.0-beta.8",
     "@mui/icons-material": "^5.14.1",
-    "@mui/material": "^5.14.2",
+    "@mui/lab": "^5.0.0-alpha.138",
+    "@mui/material": "^5.14.3",
     "framer-motion": "^10.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
