--- a/starter-code v2/package.json
+++ b/starter-code v2/package.json
@@ -21,7 +21,8 @@
     "framer-motion": "^10.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.2"
+    "react-router-dom": "^6.14.2",
+    "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
